--- a/_posts/2017-10-18-me-too.md
+++ b/_posts/2017-10-18-me-too.md
@@ -37,7 +37,7 @@ More links talking about it:
 
 I like looking at tweets. It fascinates me seeing what the masses are saying but also just browsing individual tweets at some of the random things people say. See my post on [Twitter Scraping](http://www.clesiemo3.com/twitter-scraping.html) for technical background of how I did my data pull. In short: Use tweepy to stream tweets into a postgres database to analyze and visualize in R. 
 
-For looking at #metoo tweets I used the same code and database setup (except this time on my raspberry pi instead of my old laptop). I once again and reminded about how much I like postgres. Getting a database created and reachable across my local network takes a couple minutes.
+For looking at #metoo tweets I used the same code and database setup (except this time on my raspberry pi instead of my old laptop). I once again am reminded about how much I like postgres. Getting a database created and reachable across my local network takes a couple minutes.
 
 Wired writes on [viral outrage](https://www.wired.com/story/the-problem-with-me-too-and-viral-outrage/) and how we are really good at showing support for a movement or outrage at injustice on social media. It's so easy to hit that 'like' or 'retweet' button. Turning digital outrage or support into action is the hard part.
 
